@@ -1,3 +1,7 @@
+2020-11-23 Riccardo <rm@gnu.org>
+	* Source/NSPopUpButtonCell.m (release):
+	Use standard setMenu: in release and avoid leaking the Menu. (Proposed by Fred)
+
 2020-11-03 Riccardo Mottola <rm@gnu.org>
 
 	* Source/NSBitmapImageRep+JPEG.m (_JPEGRepresentationWithProperties:):
